# Kronos-demo

./: .gitattributes  .gitignore  README.md  index.html  init_db.py  main.py  pyproject.toml  update_predictions.py  update_predictions_us_stock.py
backend/: config.py  server.py
backend/models/: prediction.py  stock.py
backend/routes/: predictions.py  stocks.py
backend/services/: data_fetcher.py  predictor.py
backend/tasks/: scheduler.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: index.js
frontend/src/components/: StockSelector.vue
frontend/src/router/: index.js
frontend/src/views/: Dashboard.vue
