[project]
name = "kronos-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.13.5",
    "binance>=0.3.110",
    "cryptography>=47.0.0",
    "einops>=0.8.2",
    "huggingface-hub>=1.8.0",
    "matplotlib>=3.9.4",
    "numpy<2",
    "pandas>=2.3.3",
    "python-binance>=1.0.37",
    "requests>=2.32.5",
    "safetensors>=0.7.0",
    "torch==2.2.2",
]
